--- a/aplication/package.json
+++ b/aplication/package.json
@@ -14,6 +14,8 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
+    "qs": "^6.11.0",
+    "qs-stringify": "^1.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
