--- a/aplication/package.json
+++ b/aplication/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.14",
     "@next/font": "13.1.6",
     "axios": "^1.3.0",
     "eslint": "8.33.0",
