--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@next/font": "13.1.6",
     "axios": "^1.3.0",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "qs": "^6.11.0",
     "qs-stringify": "^1.2.1",
@@ -28,5 +27,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.7"
+  },
+  "devDependencies": {
+    "eslint-config-next": "^15.3.0"
   }
 }
