--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@mui/material": "^5.11.14",
     "@next/font": "13.1.6",
     "axios": "^1.3.0",
-    "eslint": "8.33.0",
     "next": "13.1.6",
     "qs": "^6.11.0",
     "qs-stringify": "^1.2.1",
@@ -29,6 +28,7 @@
     "swiper": "^8.4.7"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
     "eslint-config-next": "^15.3.0"
   }
 }
